--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,22 @@
 }
 
 .App {
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App .Titulo {
   background-color: #282c34;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+
+.App .Cards {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
