--- a/src/Components/BoasVindas.css
+++ b/src/Components/BoasVindas.css
@@ -1,8 +1,8 @@
-.BoasVindas{
-    
+.BoasVindas {
+    max-width: 700px;
     width: 99%;
-    border: 1px solid black;
 }
-.BoasVindas h5{
+
+.BoasVindas h5 {
     color: rgb(173, 173, 173);
 }
